# isRealBackup

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: engine.h  geometry.h  irImage.h  irbuffer.h  ircamera.h  irdebugpass.h  irdescriptor.h  irframebuffer.h  irlight.h  iroffscreen.h  irpipeline.h  irrenderpass.h  irshadermodule.h  irswapchain.h  model.h  render.h  resourceManager.h  tglfUsage.h  tool.h  vmaUsage.h
src/: engine.cpp  main.cpp  render.cpp  tglfUsage.cpp  vmaUsage.cpp
